--- a/view/frontend/templates/product/view/renderer.phtml
+++ b/view/frontend/templates/product/view/renderer.phtml
@@ -14,14 +14,14 @@
         "[data-role=swatch-options]": {
             "Magento_Swatches/js/swatch-renderer": {
                 "baseUrl": "<?php echo $block->getBaseUrl(); ?>",
-                "jsonConfig": null<? /* @escapeNotVerified */ //echo $swatchOptions = $block->getJsonConfig() ?>,
+                "jsonConfig": null,
                 "jsonSwatchConfig": <?php /* @noEscape */ echo $block->getJsonSwatchConfig(); ?>,
                 "mediaCallback": "<?= /* @escapeNotVerified */ $block->getMediaCallback() ?>",
                 "gallerySwitchStrategy": "<?php /* @escapeNotVerified */ echo $block->getVar('gallery_switch_strategy','Magento_ConfigurableProduct') ?: 'replace'; ?>",
                 "jsonSwatchImageSizeConfig": <?php /* @noEscape */ echo $block->getJsonSwatchSizeConfig() ?: 'null'; ?>
             },
             "Magento_Swatches/js/configurable-customer-data": {
-                    "swatchOptions": null<?php /* @noEscape */ //echo $swatchOptions ?>
+                    "swatchOptions": null
             }
         }
     }
